{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 284,
  "lineage": "13d6351f-b282-0b49-da37-0f7abf0bc4d5",
  "resources": [
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e7fa5a3b6085a75",
            "arn": "arn:aws:ec2:us-east-1:204460353725:instance/i-00f3333f31c2ab741",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile",
            "id": "i-00f3333f31c2ab741",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0145d8b9a0192bbc8",
            "private_dns": "ip-172-31-62-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.62.180",
            "public_dns": "ec2-100-25-168-194.compute-1.amazonaws.com",
            "public_ip": "100.25.168.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bf88cc17de8587c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jenkins-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1274602c",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c477edb0ff49f30"
            ]
          },
          "dependencies": [
            "module.ec2_machine.aws_iam_instance_profile.instance_profile",
            "module.ec2_machine.aws_security_group.sg",
            "module.ec2_machine.data.aws_ami.docker",
            "module.ec2_machine.data.aws_iam_role.ecs_instance_role"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204460353725:security-group/sg-09c477edb0ff49f30",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c477edb0ff49f30",
            "ingress": [],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "204460353725",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e9051893"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1551878677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09c477edb0ff49f30",
            "security_group_rule_id": "sgr-0889d95ac0d1265b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_machine.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "daemon_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 50000,
            "id": "sgrule-98808776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c477edb0ff49f30",
            "security_group_rule_id": "sgr-02ab43ebb4fd7d38f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_machine.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-195369822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c477edb0ff49f30",
            "security_group_rule_id": "sgr-08c8fc1e81377c524",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_machine.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_machine",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-384334810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c477edb0ff49f30",
            "security_group_rule_id": "sgr-0bf7dc80883ad6f84",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_machine.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}